[tool.poetry]
name = "hw-19-1"
version = "0.1.0"
description = ""
authors = ["Egor Savelyev <savelev0794@mail.ru>"]
readme = "README.md"
packages = [{include = "hw_19"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
